# HR-Compliance-OpenEnv

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  baseline.py  env.py  inference.py  openenv.yaml  pyproject.toml  tasks.py
server/: app.py
src/: config.py  handlers.py  helpers.py  schemas.py  state.py  ui.py
static/: index.html
