[project]
name = "openenv-email-triage"
version = "1.0.0"
description = "Email Triage environment compliant with OpenEnv for the Meta Cup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic",
    "openai",
    "pyyaml",
    "gradio",
    "python-dotenv",
    "Faker"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
