[project]
name = "openenv-hr-compliance"
version = "1.0.0"
description = "HR Compliance Review environment compliant with OpenEnv for the Meta Cup."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "openai>=1.0",
    "pyyaml",
    "python-dotenv",
    "Faker",
    "uvicorn",
    "fastapi",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
